# implicit-recommender

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_install.py
examples/: serve_model.py  train_and_evaluate.py
requirements/: base.txt  dev.txt
src/implicit_vibecode/: __init__.py
src/implicit_vibecode/api/: __init__.py  app.py
src/implicit_vibecode/data/: __init__.py  dataset.py  dataset.py.new
src/implicit_vibecode/evaluation/: __init__.py  metrics.py
src/implicit_vibecode/models/: __init__.py  als_model.py
src/implicit_vibecode/training/: __init__.py  trainer.py
tests/: __init__.py  test_als_model.py
