[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "implicit-vibecode"
version = "0.1.0"
description = "A recommender system using implicit feedback with ALS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "implicit>=0.7.0",
    "mlflow>=2.7.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=1.10.0",
    "category-encoders>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/implicit-vibecode"
"Bug Tracker" = "https://github.com/yourusername/implicit-vibecode/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[flake8]
max-line-length = 88
extend-ignore = "E203"

[isort]
profile = "black"
line_length = 88

[mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
